@@ -1,4 +1,4 @@
-@import '-reset';
+@import 'reset-css';
 @import '-normalize';
 @import '-variables';
 
