@@ -4,6 +4,7 @@
   * (grid) add: .minvh
   * (normalize) depreciate: body min-height
   * (background) add: .bg-transparent
+  * (reset) drop -reset.css in favor of reset-css package
 
 * 0.10.0 (2020-04-15)
 
